# otel-cpp-tarantool-bridge

./: .gitignore  CMakeLists.txt  README.md  build_perf_scenario_1.lua  install_protobuf.sh  metrics.cc  metrics_ostream.cc  metrics_v2.cc  otel-collector-config.yaml  perf.txt
